RD: added basic html

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,48 @@
 <h1>Postcode Prototype</h1>
-<p>The postcode prototype will go here...</p>
+<p>Find your ward</p>
+
+<form>
+    <button type="button">Auto detect my ward</button>
+    <h2>Or</h2>
+
+    <h3>Enter postcode</h3>
+    <input type="text"/>
+    <input type="submit" value="Search"/>
+</form>
+
+<ul>
+    <li><span class="strong">Address</span>
+        <ul>
+            <li>Kensington Gardens Square</li>
+            <li>London</li>
+            <li>W24DG</li>
+        </ul>
+    </li>
+    <li><span class="strong">Ward:</span> Lancaster Gate</li>
+    <li>
+        <p>Main ward pitch goes here</p>
+    </li>
+    <li>
+        <h3>Candidates</h3>
+        <ul>
+            <li>
+                <h4>First Candidate</h4>
+                <img src="/assets/parnell.jpeg">
+
+                <p>First candidate pitch goes here</p>
+            </li>
+            <li>
+                <h4>Second Candidate</h4>
+                <img src="/assets/parnell.jpeg">
+
+                <p>Second candidate pitch goes here</p>
+            </li>
+            <li>
+                <h4>Third Candidate</h4>
+                <img src="/assets/parnell.jpeg">
+
+                <p>Third candidate pitch goes here</p>
+            </li>
+        </ul>
+    </li>
+</ul>
