RD: added ajax request to get ward by postcode

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,10 +3,12 @@
 
 <form>
     <button type="button">Auto detect my ward</button>
-    <h2>Or</h2>
+</form>
+<h2>Or</h2>
+<h3>Enter postcode</h3>
 
-    <h3>Enter postcode</h3>
-    <input type="text"/>
+<form class="postcode-form">
+    <input class="postcode-input" type="text"/>
     <input type="submit" value="Search"/>
 </form>
 
