--- a/views/index.erb
+++ b/views/index.erb
@@ -13,38 +13,65 @@
 </form>
 
 <ul>
-    <li><span class="strong">Address</span>
+    <li class="address-information hidden"><span class="strong">Address</span>
         <ul>
-            <li>Kensington Gardens Square</li>
+            <li class="address-first-line"></li>
             <li>London</li>
-            <li>W24DG</li>
+            <li class="address-postcode-line"></li>
         </ul>
     </li>
-    <li><span class="strong">Ward:</span> Lancaster Gate</li>
-    <li>
-        <p>Main ward pitch goes here</p>
+
+    <li class="ward-information hidden">
+        <span class="strong">Ward:</span> <span class="ward-name"></span>
     </li>
-    <li>
+
+
+    <li class="lancaster-gate-panel ward-panel hidden">
+        <h2>Lancaster gate ward</h2>
+        <p>Main pitch for Lancaster gate ward. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h3>Candidates</h3>
         <ul>
             <li>
-                <h4>First Candidate</h4>
+                <h4>Lan Gate First Candidate</h4>
                 <img src="/assets/parnell.jpeg">
 
-                <p>First candidate pitch goes here</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
             <li>
-                <h4>Second Candidate</h4>
+                <h4>Lan Gate Second Candidate</h4>
                 <img src="/assets/parnell.jpeg">
 
-                <p>Second candidate pitch goes here</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
             <li>
-                <h4>Third Candidate</h4>
+                <h4>Lan Gate Third Candidate</h4>
                 <img src="/assets/parnell.jpeg">
 
-                <p>Third candidate pitch goes here</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
         </ul>
     </li>
+
+    <li class="bayswater-panel ward-panel hidden">
+        <h2>Bayswater ward</h2>
+        <p>Main pitch for Bayswater ward. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3>Candidates</h3>
+        <ul>
+            <li>
+                <h4>Bays First Candidate</h4>
+                <img src="/assets/parnell.jpeg">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </li>
+            <li>
+                <h4>Bays Second Candidate</h4>
+                <img src="/assets/parnell.jpeg">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </li>
+        </ul>
+    </li>
+
+
+
 </ul>
