RD: added reset and fonts

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,3 +1,10 @@
-.hidden {
-  display: none;
+@import 'variables';
+@import 'mixins';
+
+.labourface-text {
+  font-family: 'labourface-regular', Helvetica, Arial, sans-serif;
+}
+
+.droid-text {
+  font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
 }
