--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
-<h1>Postcode Prototype</h1>
-<p>Find your ward</p>
+<h1 class="labourface-text">Postcode Prototype</h1>
+<p class="droid-text">Find your ward</p>
 
 <form>
     <button type="button">Auto detect my ward</button>
