--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Postcode Prototype</title>
+<link href="http://labourclp9.nationbuilder.com/themes/2/5228cf9c9670a44e95000002/0/attachments/14567632901506005347/default/font.css" rel="stylesheet" type="text/css"/>
 <link href="assets/index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
