--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,17 @@
-<h1 class="labourface-text">Postcode Prototype</h1>
-<p class="droid-text">Find your ward</p>
+<div class="header-container">
+<h1 class="page-header">Postcode Prototype</h1>
+</div>
 
-<form>
-    <button type="button">Auto detect my ward</button>
-</form>
-<h2>Or</h2>
-<h3>Enter postcode</h3>
-
-<form class="postcode-form">
-    <input class="postcode-input" type="text"/>
-    <input type="submit" value="Search"/>
-</form>
+<div class="ward-finder-box">
+    <form class="detect-button-form">
+        <button class="red-button" type="button">Auto detect my ward</button>
+    </form>
+    <h2 class="secondary-header">Or enter postcode</h2>
+    <form class="postcode-form">
+        <input class="text-input" class="postcode-input" type="text"/>
+        <input class="red-button" type="submit" value="Search"/>
+    </form>
+</div>
 
 <ul>
     <li class="address-information hidden"><span class="strong">Address</span>
