--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,9 @@
 <link href="assets/index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<%= yield %>
+<div class="page">
+    <%= yield %>
+</div>
 <script src="assets/index.js"></script>
 </body>
 </html>
