RD: styled mobile version of address information

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <div class="header-container">
-<h1 class="page-header">Postcode Prototype</h1>
+    <h1 class="page-header">Postcode Prototype</h1>
 </div>
 
 <div class="ward-finder-box">
@@ -8,20 +8,20 @@
     </form>
     <h2 class="secondary-header">Or enter postcode</h2>
     <form class="postcode-form">
-        <input class="text-input" class="postcode-input" type="text"/>
+        <input class="postcode-input" type="text" />
         <input class="red-button" type="submit" value="Search"/>
     </form>
-</div>
-
-<ul>
-    <li class="address-information hidden"><span class="strong">Address</span>
+    <div class="address-information hidden">
+        <h3 class="address-header">Address</h3>
         <ul>
             <li class="address-first-line"></li>
             <li>London</li>
             <li class="address-postcode-line"></li>
         </ul>
-    </li>
+    </div>
+</div>
 
+<ul>
     <li class="ward-information hidden">
         <span class="strong">Ward:</span> <span class="ward-name"></span>
     </li>
@@ -72,7 +72,4 @@
             </li>
         </ul>
     </li>
-
-
-
 </ul>
