--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -15,6 +15,10 @@
   color: $regular-grey;
   overflow: hidden;
 
+  .hidden {
+    display: none;
+  }
+
   .header-container {
     width: 96%;
     margin: 0 2%;
