--- a/assets/stylesheets/ward-finder-box.scss
+++ b/assets/stylesheets/ward-finder-box.scss
@@ -5,7 +5,7 @@
   border: solid 3px #dcdcdc;
   border-radius: 4px;
   margin: 5px 5px 0 5px;
-  padding: 0;
+  padding-bottom: 12px;
   text-align: center;
 
   .secondary-header {
@@ -20,7 +20,7 @@
     padding-top: 10px;
   }
 
-  .text-input {
+  .postcode-input {
     box-shadow: inset 0 0 3px rgba(0,0,0,0.2);
     border: 0 none;
     display: inline-block;
