--- a/views/index.erb
+++ b/views/index.erb
@@ -21,34 +21,30 @@
     </div>
 </div>
 
-<ul>
+<ul class="ward-content">
     <li class="ward-information hidden">
-        <span class="strong">Ward:</span> <span class="ward-name"></span>
+        <h2 class="secondary-header"><span class="ward-name"></span> Ward</h2>
     </li>
 
 
     <li class="lancaster-gate-panel ward-panel hidden">
-        <h2>Lancaster gate ward</h2>
-        <p>Main pitch for Lancaster gate ward. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <h3>Candidates</h3>
-        <ul>
-            <li>
-                <h4>Lan Gate First Candidate</h4>
-                <img src="/assets/parnell.jpeg">
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class="main-pitch">Main pitch for Lancaster gate ward. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3 class="candidates-title">Candidates</h3>
+        <ul class="candidate-list">
+            <li class="candidate-item">
+                <img class="profile-image" src="/assets/profile.gif">
+                <h4 class="candidate-title">Lan Gate First Candidate</h4>
+                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
-            <li>
-                <h4>Lan Gate Second Candidate</h4>
-                <img src="/assets/parnell.jpeg">
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <li class="candidate-item">
+                <img class="profile-image" src="/assets/profile.gif">
+                <h4 class="candidate-title">Lan Gate Second Candidate</h4>
+                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
-            <li>
-                <h4>Lan Gate Third Candidate</h4>
-                <img src="/assets/parnell.jpeg">
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <li class="candidate-item">
+                <img class="profile-image" src="/assets/profile.gif">
+                <h4 class="candidate-title">Lan Gate Third Candidate</h4>
+                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
         </ul>
     </li>
@@ -57,16 +53,15 @@
         <h2>Bayswater ward</h2>
         <p>Main pitch for Bayswater ward. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h3>Candidates</h3>
-        <ul>
-            <li>
+        <ul class="candidate-list">
+            <li class="candidate-item">
                 <h4>Bays First Candidate</h4>
-                <img src="/assets/parnell.jpeg">
-
+                <img src="/assets/profile.gif">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
-            <li>
+            <li class="candidate-item">
                 <h4>Bays Second Candidate</h4>
-                <img src="/assets/parnell.jpeg">
+                <img src="/assets/profile.gif">
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
