--- a/views/index.erb
+++ b/views/index.erb
@@ -39,12 +39,12 @@
             <li class="candidate-item">
                 <img class="profile-image" src="/assets/profile.gif">
                 <h4 class="candidate-title">Lan Gate Second Candidate</h4>
-                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua labore et dolore magna aliqua. Lorem ipsum.</p>
             </li>
             <li class="candidate-item">
                 <img class="profile-image" src="/assets/profile.gif">
                 <h4 class="candidate-title">Lan Gate Third Candidate</h4>
-                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
             </li>
         </ul>
     </li>
