--- a/assets/stylesheets/address-information.scss
+++ b/assets/stylesheets/address-information.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 .address-information {
 
@@ -13,4 +14,11 @@
     text-transform: uppercase;
   }
 
+}
+
+@include respond-to(desktop) {
+  .address-information {
+    margin-right: 45px;
+    margin-left: 45px;
+  }
 }
