--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -41,3 +41,20 @@
   }
 
 }
+
+@include respond-to(desktop) {
+  .page {
+    .page-content {
+      max-width: 1026px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .header-container {
+      width: 100%;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+  }
+
+
+}
