--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
 <div class="page">
-    <%= yield %>
+    <div class="page-content">
+        <%= yield %>
+    </div>
 </div>
 <script src="assets/index.js"></script>
 </body>
