RD: added social media icons

--- a/views/index.erb
+++ b/views/index.erb
@@ -35,16 +35,40 @@
                 <img class="profile-image" src="/assets/profile.gif">
                 <h4 class="candidate-title">Lan Gate First Candidate</h4>
                 <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <ul class="social-media-icons">
+                    <li class="item">
+                        <a class="link" href="#"><span class="twitter-icon"></span><span class="text">Twitter</span></a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#"><span class="facebook-icon"></span><span class="text">Facebook</span></a>
+                    </li>
+                </ul>
             </li>
             <li class="candidate-item">
                 <img class="profile-image" src="/assets/profile.gif">
                 <h4 class="candidate-title">Lan Gate Second Candidate</h4>
                 <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua labore et dolore magna aliqua. Lorem ipsum.</p>
+                <ul class="social-media-icons">
+                    <li class="item">
+                        <a class="link" href="#"><span class="twitter-icon"></span><span class="text">Twitter</span></a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#"><span class="facebook-icon"></span><span class="text">Facebook</span></a>
+                    </li>
+                </ul>
             </li>
             <li class="candidate-item">
                 <img class="profile-image" src="/assets/profile.gif">
                 <h4 class="candidate-title">Lan Gate Third Candidate</h4>
                 <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                <ul class="social-media-icons">
+                    <li class="item">
+                        <a class="link" href="#"><span class="twitter-icon"></span><span class="text">Twitter</span></a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#"><span class="facebook-icon"></span><span class="text">Facebook</span></a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </li>
