--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <div class="header-container">
     <h1 class="page-header">Postcode Prototype</h1>
+    <p class="page-header">Working postcodes are W24DG, W24QS and W26ET</p>
 </div>
 
 <div class="ward-finder-box">
@@ -74,20 +75,34 @@
     </li>
 
     <li class="bayswater-panel ward-panel hidden">
-        <h2>Bayswater ward</h2>
-        <p>Main pitch for Bayswater ward. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <h3>Candidates</h3>
+        <p class="main-pitch">Main pitch for Bayswater ward. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3 class="candidates-title">Candidates</h3>
         <ul class="candidate-list">
             <li class="candidate-item">
-                <h4>Bays First Candidate</h4>
-                <img src="/assets/profile.gif">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img class="profile-image"src="/assets/profile.gif">
+                <h4 class="candidate-title">Bays First Candidate</h4>
+                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <ul class="social-media-icons">
+                    <li class="item">
+                        <a class="link" href="#"><span class="twitter-icon"></span><span class="text">Twitter</span></a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#"><span class="facebook-icon"></span><span class="text">Facebook</span></a>
+                    </li>
+                </ul>
             </li>
             <li class="candidate-item">
-                <h4>Bays Second Candidate</h4>
-                <img src="/assets/profile.gif">
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img class="profile-image" src="/assets/profile.gif">
+                <h4 class="candidate-title">Bays Second Candidate</h4>
+                <p class="candidate-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <ul class="social-media-icons">
+                    <li class="item">
+                        <a class="link" href="#"><span class="twitter-icon"></span><span class="text">Twitter</span></a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#"><span class="facebook-icon"></span><span class="text">Facebook</span></a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </li>
