--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
         <input class="postcode-input" type="text" />
         <input class="red-button" type="submit" value="Search"/>
     </form>
-    <div class="address-information hidden">
+    <div class="address-information">
         <h3 class="address-header">Address</h3>
         <ul>
             <li class="address-first-line"></li>
