RD: removed auto button

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,10 @@
 </div>
 
 <div class="ward-finder-box">
-    <form class="detect-button-form">
-        <button class="red-button" type="button">Auto detect my ward</button>
-    </form>
-    <h2 class="secondary-header">Or enter postcode</h2>
+    <!--<form class="detect-button-form">-->
+        <!--<button class="red-button" type="button">Auto detect my ward</button>-->
+    <!--</form>-->
+    <h2 class="secondary-header">Enter postcode</h2>
     <form class="postcode-form">
         <input class="postcode-input" type="text" />
         <input class="red-button" type="submit" value="Search"/>
